# talos_wbc_controller

./: CMakeLists.txt  Dockerfile  README.org  controller_plugins.xml  entrypoint.sh  package.xml  run_container.sh
action/: FollowContactJointTrajectory.action
config/: talos_trajectory_wbc_controller.yaml
include/talos_qp_legs_controller/: talos_wbc_joint_trajectory_controller.hpp  talos_wbc_joint_trajectory_controller.hxx  whole_body_controller.h
include/talos_wbc_controller/: contact_joint_trajectory_segment.hpp  contact_segment.hpp  hardware_interface_direct_effort.hpp  init_contact_joint_trajectory.hpp  qp_formulation.hpp  talos_wbc_joint_trajectory_controller.hpp  talos_wbc_joint_trajectory_controller.hxx
launch/: talos_wbc_controller.launch
msg/: JointContactTrajectory.msg  JointContactTrajectoryControllerState.msg
osqp/osqp/: package.xml
osqp/osqp-eigen/: CMakeLists.txt  package.xml
src/: qp_formulation.cc  talos_wbc_joint_trajectory_controller.cc  whole_body_controller.cc
talos_wbc_controller/action/: FollowContactJointTrajectory.action
talos_wbc_controller/config/: talos_wbc_controller.yaml
talos_wbc_controller/include/talos_wbc_controller/: contact_joint_trajectory_segment.hpp  contact_segment.hpp  hardware_interface_direct_effort.hpp  qp_formulation.hpp  whole_body_controller.h  (+2 more)
talos_wbc_controller/launch/: talos_trajectory_wbc_controller.launch
talos_wbc_controller/msg/: JointContactTrajectory.msg  JointContactTrajectoryContacts.msg  JointContactTrajectoryControllerState.msg
talos_wbc_controller/src/: qp_formulation.cc  talos_wbc_joint_trajectory_controller.cc
talos_wbc_controller/urdf/: talos_full_legs_v2_sole_support.urdf  talos_full_massless_legs_v2_sole_support.urdf
urdf/: talos_full_legs_v2.urdf
xpp_talos/: CMakeLists.txt  package.xml
xpp_talos/include/xpp_talos/: ikfast.h  ikfast_left.h  ikfast_right.h  inverse_kinematics_talos.h  talos_cartesian_joint_converter.h  taloslegs_inverse_kinematics.h
xpp_talos/launch/: talos.launch
xpp_talos/meshes/: handle.blend
xpp_talos/src/: ik_left_leg_6d.cc  ik_right_leg_6d.cc  inverse_kinematics_talos.cc  joint_space_inertia_matrix.py  pruebas_pinocchio.py  talos_cartesian_joint_converter.cc  talos_contact_traj.cc  talos_traj_position.cc  taloslegs_inverse_kinematics.cc  urdf_visualizer_talos.cc
xpp_talos/urdf/: talos_full_legs_v2.urdf  talos_full_v2.urdf  talos_full_v2_box.urdf  talos_left_arm.urdf  talos_reduced.urdf  talos_reduced_box.urdf
